## Rails 3.0.20 (unreleased)

## Rails 3.0.19 (Jan 8, 2013)

* Hash.from_xml raises when it encounters type="symbol" or type="yaml".
  Use Hash.from_trusted_xml to parse this XML.

  CVE-2013-0156

  *Jeremy Kemper*

## Rails 3.0.18 (Jan 2, 2013)

* No changes.

## Rails 3.0.17 (Aug 9, 2012)

* ERB::Util.html_escape now escapes single quotes. [Santiago Pastorino]

## Rails 3.0.16 (Jul 26, 2012)

* No changes.

## Rails 3.0.14 (Jun 12, 2012)

* No changes.

* Rails 3.0.13 (May 31, 2012)

* Stop SafeBuffer#clone_empty from issuing warnings

* Rails 3.0.10 (August 16, 2011)

* Delayed backtrace scrubbing in `load_missing_constant` until we actually
  raise the exception


*Rails 3.0.9 (June 16, 2011)*

*No changes.


*Rails 3.0.8 (June 7, 2011)*

* No changes.

*Rails 3.0.7 (April 18, 2011)*

* Hash.from_xml no longer loses attributes on tags containing only whitespace [André Arko]


*Rails 3.0.6 (April 5, 2011)

* No changes.


*Rails 3.0.5 (February 26, 2011)*

* No changes.


*Rails 3.0.4 (February 8, 2011)*

* No changes.


*Rails 3.0.3 (November 16, 2010)*

* No changes.


*Rails 3.0.2 (November 15, 2010)*

* Added before_remove_const callback to ActiveSupport::Dependencies.remove_unloadable_constants! [Andrew White]


*Rails 3.0.1 (October 15, 2010)*

* No changes.


*Rails 3.0.0 (August 29, 2010)*

* Implemented String#strip_heredoc. [fxn]

* Pluggable cache stores: setting config.cache_store = "custom_store" will require 'active_support/cache/custom_store' and look for the CustomStore constant.  #5486 [Mike Perham]

* Removed Object#returning, Object#tap should be used instead. [Santiago Pastorino]

* Deprecation behavior is no longer hardcoded to the name of the environment.
  Instead, it is set via config.active_support.deprecation and can be one
  of :log, :stderr or :notify. :notify is a new style that sends the warning
  via ActiveSupport::Notifications, and is the new default for production
  [Yehuda Katz]
